# cubical-prototype

./: .gitignore  README.md  dune-project  notes.tex  notes.toc  test.tt
examples/: funext.tt  logic.tt  numerals.tt
lib/: version.ml
lib/core/: ast.ml  beautify.ml  cofibctx.ml  cofibctx.mli  ctx.ml  ctx.mli  dimctx.ml  dimctx.mli  dune  error.ml  eval.ml  help.ml  print.ml  substitution.ml  toplevel.ml  typecheck.ml  varctx.ml  varctx.mli
lib/logic/: cofibration.ml  dune  proplog.ml
lib/parsing/: ast.ml  dune  lexer.ml  parser.mly  scratch.mly  ulexbuf.ml
lib/util/: dune  level.ml  naming.ml
test/: dune  eval_test.ml  precon_test.ml  type_test.ml  utilities.ml
